[project]
name = "react-test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-search-results>=2.4.2",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.2",
    "langchain-tools>=0.1.34",
    "numexpr>=2.10.2",
    "serpapi>=0.1.5",
]
